# Pluvier

./: MANIFEST.in  Pluvier_system.py  README.md  requirements_dev.txt  setup.cfg
dictionary_generation/: constants.py  generate_dictionnary.py
pluvier/: Pluvier_system.py  system.py
src/: constants.py  generate_dictonnary.py
testing/: Cleanup.py  Explore_lexicon.py
tests/: Every_syllable_per_structure.json  generate_dictionnary_test.py
