[metadata]
name = Pluvier_system
version = 0.1.0
description = Pluvier is a system kind plugin for Plover. It includes a system and dictionnaries for writing in french using stenography.
keywords = plover plover_plugin pluvier
url = https://github.com/ThMazur/Pluvier
classifiers =
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11

[options]
install_requires =
	plover>=4.0.0.dev8
py_modules =
	Pluvier_system